[metadata]
name = mattermost_dl
author = Petr Opatřil
version = attr: mattermost_dl.__version__
description = Mattermost Local History Downloader
long_description = file: README.md
long_description_content_type = test/markdown
license = GNU GPL v3
license_file = LICENSE.txt
keywords = mattermost, history, backup
# url = TODO github link here
platform = any

[options]
packages = find:
python_requires = ~=3.7
install_requires =
    jsonschema~=3.2
    requests
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Topic :: Communications :: Chat

[options.package_data]
mattermost_dl = *.schema.json

[options.entry_points]
console_scripts =
    mattermost-dl = mattermost_dl.main:main
